# ukeiba

./: .gitignore  Cargo.toml
db/: create.sql
old/: Cargo.toml
old/db/: create.sql
old/src/: common.rs  db_reader.rs  db_writer.rs  main.rs
old/src/common/: horse_birthdate_parents.rs  race.rs  racecourse.rs
old/src/webpage/: horse_history.rs  oddspark_odds.rs  racelist.rs  trainer.rs
src/: common.rs  db.rs  db_reader.rs  db_writer.rs  enums.rs  fetch.rs  file.rs  main.rs  reader.rs  save.rs  scrap.rs  scrap_rakuten.rs  scrap_rakuten_banei.rs  webpage.rs
src/common/: date_racecourse.rs  horse.rs  horse_birthdate_parents.rs  jockey.rs  race.rs  race_horse.rs  racecourse.rs  trainer.rs
src/db/: race.rs
src/db_writer/: horse_history_race.rs  horse_history_racehorse.rs  initialize.rs  race.rs  racelist.rs
src/old/: common.rs  fetch.rs  main.rs
src/old/reader/: bajikyo_search.rs  race.rs  racelist.rs
src/old/scrap/: keibagojp.rs  keibagojp_racecard.rs  keibagojp_result.rs  scrap_rakuten.rs  scrap_rakuten_racedata.rs
src/old/webpage/: oddspark_odds.rs  race.rs  racelist.rs
src/reader/: bajikyo_search.rs  horse_history.rs  horse_profile.rs  oddspark_odds.rs  racelist.rs  rakuten_racelist.rs
src/scrap/: keibagojp.rs  keibagojp_racecard.rs  keibagojp_result.rs  write_racecard.rs
src/scrap_rakuten/: racedata.rs
src/scrap_rakuten_banei/: racedata.rs
src/webpage/: bajikyo_search.rs  horse_history.rs  horse_profile.rs  jockey.rs  oddspark_odds.rs  race.rs  racelist.rs  rakuten_racelist.rs
ukeiba-common/: Cargo.toml
ukeiba-common/src/: common.rs  lib.rs  scraper.rs
ukeiba-common/src/scraper/: horse_history.rs  horse_search.rs  horse_table.rs  jockey_profile.rs  jockey_search.rs  oddspark_odds_1.rs  race_list.rs  rakuten_racelist.rs  trainer_profile.rs  trainer_search.rs
ukeiba-scraper/: Cargo.toml
ukeiba-scraper/src/: bajikyo_auto_search.rs  bajikyo_pedigree.rs  bajikyo_profile.rs  bajikyo_search.rs  horse_history.rs  horse_profile.rs  horse_search.rs  jockey_profile.rs  jockey_search.rs  lib.rs  trainer_profile.rs  trainer_search.rs
ukeiba-scraper/src/scraper/: bajikyo_pedigree.rs  bajikyo_profile.rs  horse_history.rs
ukeiba-test/: Cargo.toml  horse_data  horse_data.csv  horses.csv
ukeiba-test/src/: common.rs  db.rs  get.rs  main.rs  scrap.rs
ukeiba-test/src/db/: writer.rs
ukeiba-test/src/get/: get_date_racecourse.rs  get_horse_bajikyo_id.rs  get_horse_nar_id.rs  get_jockey_nar_id.rs  get_race_data.rs  get_trainer_nar_id.rs
ukeiba-test/src/scrap/: scrap_bajikyo_pedigree.rs  scrap_bajikyo_profile.rs  scrap_horse_history.rs  scrap_horse_profile.rs  scrap_horse_table.rs  scrap_jockey.rs  scrap_jockeys.rs  scrap_oddspark_odds_1.rs  scrap_race_list.rs  scrap_rakuten_racelist.rs  scrap_trainer.rs  scrap_trainers.rs
