[package]
name = "keiba_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
scraper = "0.13.0"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4.0"
unicode-normalization = "0.1.0"
cssparser = "0.27.0"
thiserror = "1.0.0"
anyhow = { version = "1.0.0", default-features = false }
rusqlite = "0.28.0"
strum = "0.24"
strum_macros = "0.24"