[package]
name = "keiba_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["blocking"] }
scraper = "0.13.0"
chrono = "0.4.0"
unicode-normalization = "0.1.0"
cssparser = "0.27.0"
thiserror = "1.0.0"
anyhow = { version = "1.0.0", default-features = false }
rusqlite = {version = "0.28.0", features = ["chrono"]}
strum = "0.24"
strum_macros = "0.24"
url = "2.3.0"
dirs = "4.0.0"
indicatif = "0.17.0"
flate2 = "1.0"
regex = "1.7"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.2.0"