[package]
name = "ukeiba-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.16"
unicode-normalization = "0.1"
xz2 = "0.1"

