[package]
name = "ukeiba-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
ukeiba-scraper = { path = "../ukeiba-scraper" }
