[package]
name = "ukeiba-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
csv = "1.1"
dirs = "5.0"
hashbrown = "0.14"
indicatif = {version = "0.17", features = ["rayon"]}
itertools = "0.10"
rayon = "1.7"
regex = "1.7"
rusqlite = {version = "0.29", features = ["chrono"]}
serde = { version = "1.0", features = ["derive"] }
serde_rusqlite = "0.33"
ukeiba-common = { path = "../ukeiba-common" }
